# capstone-motor-component

./: .gitignore  Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml
.claude/: settings.json
config/: config.yml
docs/: motor_component_requirements.md
src/capstone_motor/: __init__.py  app.py  command_receiver.py  config.py  heartbeat_publisher.py  main.py  models.py  motor_driver.py  motors.py  services.py  state_store.py  test_motor2.py
