[tool.poetry]
name = "capstone-motor-component"
version = "0.1.0"
description = ""
package-mode = false
authors = ["kmiya <miyak19@mytru.ca>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.12.5"
pyzmq = "^27.1.0"
msg-handler = { git = "https://github.com/TRU-Capstone-2026-WheelChock/wheelchoke-system-communication-system.git" }
pyyaml = "^6.0.3"


[tool.poetry.group.dev.dependencies]
mypy = ">=1.19.1,<2.0.0"
pytest = ">=9.0.2,<10.0.0"
pytest-mock = ">=3.15.1,<4.0.0"
pytest-asyncio = "^1.3.0"
pylint = "^4.0.5"
black = "^26.1.0"
types-pyyaml = "^6.0.12.20250915"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]

pythonpath = "src"

testpaths = ["test"]

addopts = "-ra -q"
